<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_full"
            tools:context="com.fivebb.selfcare.activities.HelpActivity">

        <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_keyboard_arrow_left_black_48dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_marginStart="@dimen/margin_medium_2"/>

        <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.5"
                android:background="@drawable/bg_main_image_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivBack"
                app:layout_constraintTop_toTopOf="parent"/>

        <mm.technomation.mmtext.MMTextView
                android:id="@+id/tvScreenTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_help"
                app:layout_constraintTop_toTopOf="@id/ivBack"
                app:layout_constraintBottom_toBottomOf="@id/ivBack"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/ScreenTitle"/>

        <View android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/white_full"
                app:layout_constraintTop_toTopOf="@id/lblOperationTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/margin_medium_3"/>

        <mm.technomation.mmtext.MMTextView
                android:id="@+id/lblOperationTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/operator_time"
                app:layout_constraintTop_toBottomOf="@id/ivBack"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_regular"
                android:background="@drawable/bg_operation_time"/>

        <ImageView
                android:id="@+id/ivYouTube"
                android:layout_width="@dimen/help_action_icon_height"
                android:layout_height="@dimen/help_action_icon_height"
                android:src="@drawable/ic_youtube"
                app:layout_constraintTop_toTopOf="@id/lblOperationTime"
                app:layout_constraintEnd_toStartOf="@id/ivFaceBook"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:padding="@dimen/margin_small"
                android:background="@drawable/bg_icon_fill_white_circle"/>

        <ImageView
                android:id="@+id/ivFaceBook"
                android:layout_width="@dimen/help_action_icon_height"
                android:layout_height="@dimen/help_action_icon_height"
                android:src="@drawable/ic_facebook"
                app:layout_constraintTop_toTopOf="@id/lblOperationTime"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:scaleType="fitCenter"
                android:background="@drawable/bg_icon_fill_white_circle"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recShowroom"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="none"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                tools:listitem="@layout/list_item_showroom"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/ivYouTube"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/recShowroom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:overScrollMode="never">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ly_showData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_full">
                <!--sale contact-->
                <androidx.cardview.widget.CardView
                        android:id="@+id/cvContactNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/cvContactEmail"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_marginEnd="@dimen/margin_medium_2"
                        android:layout_marginBottom="@dimen/margin_medium"
                        app:cardCornerRadius="@dimen/margin_medium">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/margin_medium_2">

                        <mm.technomation.mmtext.MMTextView
                                android:id="@+id/lblContactNumber"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/lbl_contact_number"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_marginTop="@dimen/margin_medium"
                                style="@style/CategoryTitle"
                                android:layout_marginStart="@dimen/margin_medium_2"
                                android:layout_marginEnd="@dimen/margin_medium_2"/>

                        <mm.technomation.mmtext.MMTextView
                                android:id="@+id/lblContactNumberOne"
                                android:layout_width="wrap_content"
                                android:layout_height="35dp"
                                tools:text="@string/contact_number_one"
                                android:paddingHorizontal="10dp"
                                android:layout_marginTop="@dimen/margin_medium"
                                android:layout_marginStart="@dimen/margin_medium_2"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/lblContactNumber"
                                android:drawableStart="@drawable/ic_phone_black_32"
                                android:drawablePadding="@dimen/margin_medium"
                                android:gravity="center"
                                android:textSize="@dimen/text_regular"
                                android:textColor="@color/primary_text"
                                android:background="@drawable/bg_contact"/>

                        <mm.technomation.mmtext.MMTextView
                                android:id="@+id/lblContactNumberTwo"
                                android:layout_width="wrap_content"
                                android:layout_height="35dp"
                                tools:text="@string/contact_number_one"
                                android:paddingHorizontal="10dp"
                                android:layout_marginTop="@dimen/margin_medium"
                                android:layout_marginStart="@dimen/margin_medium_2"
                                app:layout_constraintStart_toEndOf="@id/lblContactNumberOne"
                                app:layout_constraintTop_toBottomOf="@id/lblContactNumber"
                                android:drawableStart="@drawable/ic_phone_black_32"
                                android:drawablePadding="@dimen/margin_medium"
                                android:gravity="center"
                                android:textSize="@dimen/text_regular"
                                android:textColor="@color/primary_text"
                                android:background="@drawable/bg_contact"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>
                <!--email-->
                <androidx.cardview.widget.CardView
                        android:id="@+id/cvContactEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/cvContactNumber"
                        app:layout_constraintStart_toStartOf="@id/cvContactNumber"
                        app:layout_constraintEnd_toEndOf="@id/cvContactNumber"
                        android:layout_marginTop="@dimen/margin_medium"
                        app:cardCornerRadius="@dimen/margin_medium">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <mm.technomation.mmtext.MMTextView
                                android:id="@+id/lblContactEmail"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/lbl_email_address"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_marginTop="@dimen/margin_medium_2"
                                android:layout_marginStart="@dimen/margin_medium_2"
                                android:layout_marginEnd="@dimen/margin_medium_2"
                                style="@style/CategoryTitle"/>

                        <mm.technomation.mmtext.MMTextView
                                android:id="@+id/lblEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="35dp"
                                tools:text="@string/email_address"
                                app:layout_constraintTop_toBottomOf="@id/lblContactEmail"
                                app:layout_constraintStart_toStartOf="@id/lblContactEmail"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:layout_marginBottom="@dimen/margin_medium_3"
                                android:layout_marginTop="@dimen/margin_medium"
                                android:background="@drawable/bg_contact"
                                android:drawablePadding="@dimen/margin_medium"
                                android:drawableStart="@drawable/ic_email"
                                android:gravity="center"
                                android:textColor="@color/primary_text"
                                android:textSize="@dimen/text_regular"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>
                <!--map-->
                <androidx.cardview.widget.CardView
                        android:id="@+id/cvLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/cvContactEmail"
                        app:layout_constraintStart_toStartOf="@id/cvContactNumber"
                        app:layout_constraintEnd_toEndOf="@id/cvContactNumber"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        app:cardCornerRadius="@dimen/margin_medium">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <mm.technomation.mmtext.MMTextView
                                android:id="@+id/lblLocation"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                tools:text="@string/location_address"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                android:layout_marginTop="@dimen/margin_medium_2"
                                android:layout_marginStart="@dimen/margin_medium_2"
                                android:layout_marginEnd="@dimen/margin_medium_2"
                                android:drawableStart="@drawable/ic_location"
                                android:drawablePadding="@dimen/margin_medium"
                                android:textColor="@color/primary_text"
                                android:textSize="@dimen/text_regular"/>

                        <com.fivebb.selfcare.components.CustomMapView
                                android:id="@+id/mapView"
                                android:layout_width="0dp"
                                android:layout_height="250dp"
                                app:layout_constraintTop_toBottomOf="@id/lblLocation"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:layout_marginTop="@dimen/margin_medium_2"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

